--- a/src/components/InvestmentOpportunities.css
+++ b/src/components/InvestmentOpportunities.css
@@ -1,14 +1,34 @@
 .investment-opportunities {
-  width: 100vw;
-  padding-left:20px;
-  padding-right:20px;
+  width: 100%;
+  /* border: 2px solid white; */
+  /* height: 400px; */
+  display: flex;
+  justify-content: center;
 }
+
+.investment-content-opportunities {
+  position: relative;
+  width: 80%;
+}
+
+.investment-content-bg {
+  position: absolute;
+  top: 0;
+  left: 10%;
+  width: 80%;
+  height: 100%;
+  background-image: url("./asset/Linebackground.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.3;
+  z-index: -99999;
+}
+
 .text-gradient {
-  background-image: linear-gradient(
-    180deg,
-    rgba(255, 233, 152, 1) 63%,
-    rgba(87, 55, 13, 0.938813025210084) 100%
-  );
+  background-image: linear-gradient(180deg,
+      rgba(255, 233, 152, 1) 63%,
+      rgba(87, 55, 13, 0.938813025210084) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
@@ -18,10 +38,10 @@
 .title {
   color: white;
   font-family: "Roboto", sans-serif;
-  font-weight:700;
+  font-weight: 700;
   font-size: 40px;
-  line-height:48px;
-  border: 1px solid white;
+  line-height: 48px;
+  /* border: 1px solid white; */
 }
 
 .description {
@@ -34,6 +54,8 @@
 .benefits {
   display: flex;
   justify-content: space-between;
+
+
 }
 
 .benefit {
@@ -41,22 +63,28 @@
   text-align: center;
   background-color: #1a1a1a;
   border-bottom: 3px solid #e9bd66;
-  width:360px;
-  height:310px;
+  width: 360px;
+  height: 310px;
+  border-radius: 8px;
+  box-sizing: content-box;
+  padding: 40px 30px 20px 30px;
+  margin-right: 30px;
 }
 
 .benefit-title {
   color: #edbf6f;
   font-family: 'Noto Serif', serif;
-  font-weight:500;
+  font-weight: 500;
   font-size: 22px;
- line-height: 25.3px;
+  line-height: 25.3px;
+  text-align: left;
 }
 
 .benefit-description {
-   color: #7d7d7d;
+  color: #7d7d7d;
   font-family: "Roboto", sans-serif;
-  font-weight:300;
+  font-weight: 300;
   font-size: 18px;
-  line-height:32px;
+  line-height: 32px;
+  text-align: left;
 }
