--- a/src/components/InvestmentOpportunities.css
+++ b/src/components/InvestmentOpportunities.css
@@ -4,19 +4,22 @@
   /* height: 400px; */
   display: flex;
   justify-content: center;
+  padding-bottom: 40px;
 }
 
 .investment-content-opportunities {
   position: relative;
   width: 80%;
+  height: inherit;
 }
 
 .investment-content-bg {
   position: absolute;
+  /* border: 1px solid white;/ */
   top: 0;
   left: 10%;
   width: 80%;
-  height: 100%;
+  height: 110%;
   background-image: url("./asset/Linebackground.png");
   background-size: cover;
   background-position: center;
