--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -1,20 +1,27 @@
-.our-blogs {
+.our-blogs-container {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.our-blogs {
+  width: 80%;
+  display: flex;
   justify-content: center;
+  border: 1px solid yellowgreen;
 }
 
 .our-blogs-content {
   position: relative;
-  width: 80%;
+  width: 100%;
 }
 
 .text-gradient {
-  background-image: linear-gradient(
-    180deg,
-    rgba(255, 233, 152, 1) 63%,
-    rgba(87, 55, 13, 0.938813025210084) 100%
-  );
+  background-image: linear-gradient(180deg,
+      rgba(255, 233, 152, 1) 63%,
+      rgba(87, 55, 13, 0.938813025210084) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
@@ -33,17 +40,66 @@
   margin-bottom: 3rem;
 }
 
-.our-blogs-button{
-    display:flex;
-    justify-content:center;
+.our-blogs-button {
+  display: flex;
+  justify-content: center;
 }
 
-.explore-more-button{
+.explore-more-button {
   background-color: transparent;
-  color:#F0D77B;
-   border: 1px solid #F0D77B; 
-  padding: 10px 20px; 
-  cursor: pointer; 
-  outline: none;  
+  color: #F0D77B;
+  border: 1px solid #F0D77B;
+  padding: 10px 20px;
+  cursor: pointer;
+  outline: none;
   border-radius: 4px;
+}
+
+.our-blogs-image {
+  width: 80%;
+  display: flex;
+  /* border: 1px solid gold; */
+}
+
+.our-blog-image-left {
+  width: 45%;
+  /* border: 1px solid gold; */
+}
+
+.our-blog-image-left .img {
+  width: 100%;
+  height: 622px;
+}
+
+
+.our-blog-image-right {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  height: 261px;
+  /* border: 5px solid red; */
+}
+
+.our-blog-image-right-upper {
+  /* border: 1px solid white; */
+  height: fit-content;
+  display: flex;
+}
+
+.our-blog-image-right-upper-image {
+  width: 50%;
+  height: fit-content;
+}
+
+.our-blog-image-right-upper-image img {
+  width: 100%;
+  height: 261px;
+}
+
+.our-blog-image-right-upper-content {
+  width: 50%;
+  /* border: 1px solid wheat; */
+  background-color: #2D2C2C;
+  color: white;
+  height: 261px;
 }
