--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -66,9 +66,9 @@
   /* border: 1px solid gold; */
 }
 
-.our-blog-image-left .img {
+.our-blog-image-left img {
   width: 100%;
-  height: 622px;
+  height: 522px;
 }
 
 
