--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -3,14 +3,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .our-blogs {
   width: 80%;
   display: flex;
   justify-content: center;
-  border: 1px solid yellowgreen;
+  
 }
 
 .our-blogs-content {
@@ -19,9 +18,11 @@
 }
 
 .text-gradient {
-  background-image: linear-gradient(180deg,
-      rgba(255, 233, 152, 1) 63%,
-      rgba(87, 55, 13, 0.938813025210084) 100%);
+  background-image: linear-gradient(
+    180deg,
+    rgba(255, 233, 152, 1) 63%,
+    rgba(87, 55, 13, 0.938813025210084) 100%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
@@ -43,12 +44,13 @@
 .our-blogs-button {
   display: flex;
   justify-content: center;
+  padding: 50px;
 }
 
 .explore-more-button {
   background-color: transparent;
-  color: #F0D77B;
-  border: 1px solid #F0D77B;
+  color: #f0d77b;
+  border: 1px solid #f0d77b;
   padding: 10px 20px;
   cursor: pointer;
   outline: none;
@@ -71,7 +73,6 @@
   height: 522px;
 }
 
-
 .our-blog-image-right {
   width: fit-content;
   display: flex;
@@ -92,16 +93,11 @@
   height: fit-content;
 }
 
-.our-blog-image-right-upper-image img {
-  width: 319px;
-  height: 261px;
-}
-
 .our-blog-image-right-upper-content {
   width: 319px;
   height: 261px;
   /* border: 1px solid wheat; */
-  background-color: #2D2C2C;
+  background-color: #2d2c2c;
   color: white;
   height: 261px;
 }
