--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -1,13 +1,57 @@
-.testimonial-title{
-    display:flex;
-    justify-content: center;
-    color:white;
-    font-family: 'Roboto', sans-serif;
-    font-weight:700;
-    font-size: 40px;
-    line-height: 52px;
-    background: linear-gradient(180deg, #FFE998 -19.23%, #57370D 100%);
- -webkit-background-clip: text;
+..testimonial-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.testimonial-title {
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  background: linear-gradient(180deg, #ffe998 -19.23%, #57370d 100%);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  
+}
+
+.testimonial-text {
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.testimonial-author {
+  font-size: 14px;
+  font-style: italic;
+}
+
+.testimonial-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.testimonial {
+  width: calc(50% - 20px);
+  color: white;
+}
+
+.testimonial img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.testimonial-text {
+  color: white;
+}
+
+.testimonial-text p {
+  text-align: center;
 }
