--- a/src/components/InvestmentOpportunities.css
+++ b/src/components/InvestmentOpportunities.css
@@ -56,9 +56,8 @@
 
 .benefits {
   display: flex;
-  justify-content: space-between;
-
-
+   justify-content: space-around;
+  margin-top: 20px;
 }
 
 .benefit {
@@ -72,6 +71,8 @@
   box-sizing: content-box;
   padding: 40px 30px 20px 30px;
   margin-right: 30px;
+  transition: all 0.3s ease;
+
 }
 
 .benefit-title {
@@ -90,4 +91,8 @@
   font-size: 18px;
   line-height: 32px;
   text-align: left;
+}
+.benefit:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
