--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -9,7 +9,7 @@
   width: 80%;
   display: flex;
   justify-content: center;
-  
+
 }
 
 .our-blogs-content {
@@ -18,11 +18,9 @@
 }
 
 .text-gradient {
-  background-image: linear-gradient(
-    180deg,
-    rgba(255, 233, 152, 1) 63%,
-    rgba(87, 55, 13, 0.938813025210084) 100%
-  );
+  background-image: linear-gradient(180deg,
+      rgba(255, 233, 152, 1) 63%,
+      rgba(87, 55, 13, 0.938813025210084) 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
@@ -59,45 +57,108 @@
 
 .our-blogs-image {
   width: 80%;
+  /* height: 522px; */
   display: flex;
   /* border: 1px solid gold; */
 }
 
 .our-blog-image-left {
-  width: fit-content;
-  /* border: 1px solid gold; */
+
+  width: 80%;
+  /* border: 1px solid rgb(0, 255, 21); */
 }
 
 .our-blog-image-left img {
-  width: 523px;
-  height: 522px;
+  width: 100%;
+  height: 100%;
+  /* height: 522px; */
 }
 
 .our-blog-image-right {
   width: fit-content;
   display: flex;
   flex-direction: column;
-  height: 261px;
-  /* border: 5px solid red; */
+  /* height: 261px; */
+  width: 100%;
+  /* border: 1px solid red; */
 }
 
 .our-blog-image-right-upper {
   /* border: 1px solid white; */
-  height: fit-content;
+  /* height: 261px; */
+  /* height: fit-content; */
   display: flex;
 }
 
 .our-blog-image-right-upper-image {
-  width: 319px;
-  height: 261px;
-  height: fit-content;
+  /* border: 1px solid pink; */
+  width: 50%;
+  /* width: 319px;
+  height: 261px; */
+  /* height: fit-content; */
+}
+
+.our-blog-image-right-upper-image img {
+  width: 100%;
+  height: 100%;
 }
 
 .our-blog-image-right-upper-content {
-  width: 319px;
-  height: 261px;
-  /* border: 1px solid wheat; */
+  width: 50%;
+  /* height: 260px; */
+  /* border: 1px solid rgb(224, 151, 14); */
   background-color: #2d2c2c;
   color: white;
-  height: 261px;
+  /* padding: 15px; */
+}
+
+.blog-box-heading {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+}
+
+.blog-box-heading .heading {
+  font: 'Roboto';
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 15px;
+  color: #F0D77B;
+}
+
+.blog-box-heading .data {
+  font: 'Roboto';
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color:#999999;
+}
+
+.blog-box-content{
+  /* font: 'Roboto'; */
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  color: #7D7D7D;
+  margin: 15px;
+}
+
+.blog-box-story{
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #7D7D7D;
+  margin: 15px;
+}
+
+.blog-box-button{
+  margin: 15px;
+}
+
+.blog-box-button button {
+  border: none;
+  border-bottom:1px solid #f0d77b;
+  background-color: transparent;
+  color: #f0d77b;
+  padding: 0px;
 }
