--- a/src/components/InvestmentOpportunities.css
+++ b/src/components/InvestmentOpportunities.css
@@ -72,6 +72,7 @@
   padding: 40px 30px 20px 30px;
   margin-right: 30px;
   transition: all 0.3s ease;
+  position: relative;
 
 }
 
@@ -95,4 +96,20 @@
 .benefit:hover {
   transform: translateY(-5px);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-bottom: #e9bd66ad;
+}
+
+.bottom-border{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 0px;
+}
+ 
+.benefit:hover .bottom-border {
+  width: 100%;
+  height: 85px;
+  border-radius: 0px 0px 8px 8px;
+  background-color: #e9bd66ad;
+  transition: all 0.3s ease;
 }
