--- a/src/components/InvestmentOpportunities.css
+++ b/src/components/InvestmentOpportunities.css
@@ -110,6 +110,8 @@
   width: 100%;
   height: 85px;
   border-radius: 0px 0px 8px 8px;
-  background-color: #e9bd66ad;
+  background-image: linear-gradient(180deg,
+  #e9bd66ad 63%,
+  rgba(87, 55, 13, 0.651) 100%);
   transition: all 0.3s ease;
 }
