--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -1,7 +1,8 @@
-..testimonial-container {
+.testimonial-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   justify-content: center;
   padding: 20px;
 }
@@ -32,6 +33,7 @@
 }
 
 .testimonial-section {
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -40,6 +42,7 @@
 .testimonial {
   width: calc(50% - 20px);
   color: white;
+  height: 300px;
 }
 
 .testimonial img {
