--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -9,7 +9,6 @@
   width: 80%;
   display: flex;
   justify-content: center;
-
 }
 
 .our-blogs-content {
@@ -18,9 +17,11 @@
 }
 
 .text-gradient {
-  background-image: linear-gradient(180deg,
-      rgba(255, 233, 152, 1) 63%,
-      rgba(87, 55, 13, 0.938813025210084) 100%);
+  background-image: linear-gradient(
+    180deg,
+    rgba(255, 233, 152, 1) 63%,
+    rgba(87, 55, 13, 0.938813025210084) 100%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
@@ -53,7 +54,7 @@
   cursor: pointer;
   outline: none;
   border-radius: 4px;
-}
+ }
 
 .our-blogs-image {
   width: 80%;
@@ -107,46 +108,63 @@
 }
 
 .blog-box-heading .heading {
-  font: 'Roboto';
+  font: "Roboto";
   font-weight: 500;
   font-size: 13px;
   line-height: 15px;
-  color: #F0D77B;
+  color: #f0d77b;
 }
 
 .blog-box-heading .data {
-  font: 'Roboto';
+  font: "Roboto";
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
-  color:#999999;
+  color: #999999;
 }
 
-.blog-box-content{
+.blog-box-content {
   /* font: 'Roboto'; */
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
-  color: #7D7D7D;
+  color: #7d7d7d;
   margin: 15px;
 }
 
-.blog-box-story{
+.blog-box-story {
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
-  color: #7D7D7D;
+  color: #7d7d7d;
   margin: 15px;
 }
 
-.blog-box-button{
+.blog-box-button {
   margin: 15px;
 }
 
 .blog-box-button button {
   border: none;
-  border-bottom:1px solid #f0d77b;
+  border-bottom: 1px solid #f0d77b;
   background-color: transparent;
   color: #f0d77b;
   padding: 0px;
+}
+
+.our-blog-image-left {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 508px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.our-blog-image-left-content {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  padding-bottom: 108px;
 }
