--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -1,6 +1,6 @@
 .testimonial-container {
   padding: 50px 0;
-}
+  }
 
 .testimonial-section {
   display: flex;
@@ -70,3 +70,8 @@ font-family: 'Nunito', sans-serif;
   height: 50px;
 }
 
+.vertical-line {
+    width: 2px; /* Width of the line */
+    height: 100%; /* Height of the line */
+    background-color: #E5B96F /* Color of the line */
+  }
