--- a/src/components/OurBlog.css
+++ b/src/components/OurBlog.css
@@ -156,7 +156,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 508px;
+  /* height: 508px; */
   background-size: cover;
   background-position: center;
   position: relative;
