--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -17,10 +17,12 @@
 
 .testimonial-left,
 .testimonial-right {
-  flex: 1; /* Equal width for both sides */
-  padding: 20px;  
+  /* flex: 1; Equal width for both sides */
+  /* padding: 20px;  
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+  display: flex;
+  justify-content: flex-start;
 }
 
 .testimonial-title {
